[Gadot] -n update localized

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -270,3 +270,12 @@
 
 //ALERT
 "Alerts"="Alerts";
+"Load more..."="Load more...";
+"Resolve"="Resolve";
+"Alert Detail"="Alert Detail";
+"Driver Name"="Driver Name";
+"Truck Name"="Truck Name";
+"Tanker Name"="Tanker Name";
+"Comment"="Comment";
+"Rule ID"="Rule ID";
+"Resolve alert"="Resolve alert";
