--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -275,3 +275,10 @@
 
 //ALERT
 "Alerts"="Alerts";
+"Load more..."="Load more...";//new
+"Resolve"="Resolve";//new
+"Alert Detail"="Alert Detail";//new
+"Truck Name"="Truck Name";//new
+"Comment"="Comment";//new
+"Rule ID"="Rule ID";//new
+"Resolve alert"="Resolve alert";//new
