[LocationTracker] - Add require location when distence > a

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -38,6 +38,7 @@
 "Retry"="נסה שוב";
 "You are in offline,some funtion may be restricted."="החיבור לאינטרנט מנותק. חלק מהאפשרויות מוגבלות כרגע.";
 "Sorry, this account is not use as Driver account. Please contact your administrator for more information"="חשבון זה אינו חשבון נהג. צור קשר עם מנהל המערכת למידע נוסף.";
+"Content cann't empty."="Content cann't empty.";// new
 
 //LOGIN_SCREEN
 "login_title"="התחברות";
@@ -292,7 +293,7 @@
 "Alert Detail"="פרטי התראה";
 "Truck Name"="שם משאית";
 "Comment"="הערה";
-"Comment"="הערה...";
+"Comment..."="הערה...";
 "Rule ID"="מספר חוק";
 "Resolve alert"="פתירת התראה";
 "%d years ago"="לפני %d שנים";
@@ -300,7 +301,7 @@
 "%d weeks ago"="לפני %d שבועות";
 "%d days ago"="לפני %d ימים";
 "%d hours ago"="לפני %d שעות";
-"%d minutes ago"="לפני %  דקות";
+"%d minutes ago"="לפני %d דקות";
 "just now"="עכשיו";
 "%d day ago"="לפני d% יום";
 "%d week ago"="לפני שבוע  %d";
