--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -38,6 +38,7 @@
 "Retry"="Retry";
 "You are in offline,some funtion may be restricted."="You are in offline,some funtion may be restricted.";
 "Sorry, this account is not use as Driver account. Please contact your administrator for more information"="Sorry, this account is not use as Driver account. Please contact your administrator for more information";
+"Content cann't empty."="Content cann't empty.";
 
 //LOGIN_SCREEN
 "login_title"="LOGIN";
