[DMS-Customization] updated the RouteList screen

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -234,7 +234,9 @@
 "Tanker" = "Tanker";
 "RouteID-%d"="RouteID-%d";
 "Route ID" ="Route ID";
-
+"%d STOPS"= "%d STOPS";
+"Here is your plan for today - %@" = "Here is your plan for today - %@";
+"Hi %@"="Hi %@";
 
 
 //PICTURE
