--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -242,6 +242,9 @@
 "Tanker"="מכלית";
 "RouteID-%d"="מספר מסלול-%d";
 "Route ID" ="מספר מסלול";
+"%d STOPS"= "%d STOPS"; //New
+"Here is your plan for today - %@" = "Here is your plan for today - %@";//new
+"Hi %@"="Hi %@";//new
 
 
 //PICTURE
