[DMS-Customization] Updated the RouteDetail screen

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -233,8 +233,8 @@
 "message_send_new_message"="שלח הודעה חדשה";
 "message_add_message_hint"="הקלד הודעה";
 
-//ROUTE_LIST_SCREEN
 
+//ROUTE_LIST_SCREEN
 "You have no route"="אין לך מסלולים כרגע";
 "Route Number"="Route number";//new
 "Routes List"="רשימת מסלולים";
@@ -246,6 +246,11 @@
 "Here is your plan for today - %@" = "Here is your plan for today - %@";//new
 "Hi %@"="Hi %@";//new
 
+
+//ROUTE DETAIU
+"Locations"="Locations";//new
+"Map"="Map";//new
+"Stops"="Stops";//new
 
 //PICTURE
 "Album Gallery"="בחירה מתוך הגלריה";
