--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -102,6 +102,8 @@
 "Pick driver"="Pick driver";
 "Filter orders by"="Filter orders by";
 "OrderID-%d"="OrderID-%d";
+
+
 //ODER_DETAIL
 "Order Detail"="Order Detail";
 "Delivery number"="Delivery number";
@@ -237,6 +239,11 @@
 "%d STOPS"= "%d STOPS";
 "Here is your plan for today - %@" = "Here is your plan for today - %@";
 "Hi %@"="Hi %@";
+
+//ROUTE DETAIU
+"Locations"="Locations";
+"Map"="Map";
+"Stops"="Stops";
 
 
 //PICTURE
