[DMS-Customization] *Cache image when downloaded*

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -205,6 +205,7 @@
 "To"="למקום";
 "Name"="שם";
 "Volume"="כמות";
+"Order:#%d has delevered successfully."="Order:#%d has delevered successfully.";//new
 
 //ORDER_ASSIGNMENT
 "Orders assignment"="שיוך משימות";
