--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -150,6 +150,7 @@
 "order_detail_take_picture"="Take Picture";
 "order_detail_total"="Total";
 "order_detail_barcode_notmatch"="Barcode does not match";
+"Order:#%d has delevered successfully."="Order:#%d has delevered successfully.";
 
 "Hour"="Hour";
 "Date"="Date";
