[DMS-Customization] *Fix conflict*

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -151,7 +151,8 @@
 "order_detail_total"="Total";
 "order_detail_barcode_notmatch"="Barcode does not match";
 "Order:#%d has delevered successfully."="Order:#%d has delevered successfully.";
-
+"Do you want to start this order?"="Do you want to start this order?";
+"Do you want to Finish this order?" = "Do you want to Finish this order?";
 "Hour"="Hour";
 "Date"="Date";
 "Certificate number"="Certificate number";
