--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -206,7 +206,8 @@
 "Name"="שם";
 "Volume"="כמות";
 "Order:#%d has delevered successfully."="Order:#%d has delevered successfully.";//new
-
+"Do you want to start this order?"="Do you want to start this order?";//new
+"Do you want to Finish this order?" = "Do you want to Finish this order?";//new
 //ORDER_ASSIGNMENT
 "Orders assignment"="שיוך משימות";
 "Today"="היום";
