[DMS-Customization] *Done https://seldat.atlassian.net/browse/SOLA1-60

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -175,6 +175,7 @@
 "Destination city"="Destination city";
 "Standby"="Standby";
 "Barcode"="Barcode";
+"Package Ref ID"="Package Ref ID";
 "Collect call"="Collect call";
 "Status"="Status";
 "Failure cause"="Failure cause";
