--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -176,6 +176,7 @@
 "Destination city"="ישוב יעד";
 "Standby"="המתנה";
 "Barcode"="ברקוד";
+"Package Ref ID"="Package Ref ID";
 "Collect call"="גוביינא";
 "Status"="סטטוס";
 "Failure cause"="סיבת הכשל";
