--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -203,7 +203,7 @@
 "Name"="Name";
 "Volume"="Volume";
 "Pickup"="Pickup";
-
+"Do you want to pickup this order?"= "Do you want to pickup this order?";
 
 //ORDER_ASSIGNMENT
 "Orders assignment"="Orders assignment";
