--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -209,6 +209,7 @@
 "Order:#%d has delevered successfully."="Order:#%d has delevered successfully.";//new
 "Do you want to start this order?"="Do you want to start this order?";//new
 "Do you want to Finish this order?" = "Do you want to Finish this order?";//new
+"Do you want to pickup this order?"= "Do you want to pickup this order?";//new
 
 //ORDER_ASSIGNMENT
 "Orders assignment"="שיוך משימות";
