DMS-Customization] *Implement the issue SOLA1-77*

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -204,6 +204,8 @@
 "Volume"="Volume";
 "Pickup"="Pickup";
 "Do you want to pickup this order?"= "Do you want to pickup this order?";
+"Van Load"="Van Load";
+"Deliver"="Deliver";
 
 //ORDER_ASSIGNMENT
 "Orders assignment"="Orders assignment";
