--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -210,6 +210,9 @@
 "Do you want to start this order?"="Do you want to start this order?";//new
 "Do you want to Finish this order?" = "Do you want to Finish this order?";//new
 "Do you want to pickup this order?"= "Do you want to pickup this order?";//new
+"Van Load"="Van Load";//new
+"Deliver"="Deliver";//new
+
 
 //ORDER_ASSIGNMENT
 "Orders assignment"="שיוך משימות";
