fix "comment" after slugify

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -179,7 +179,7 @@
 "collect-call"="collect-call";
 "Status"="Status";
 "failure-cause"="failure-cause";
-"comment"comment
+"comment" = "comment";
 "certificate-number (Client)"="certificate-number (Client)";
 "execution-time"="execution-time";
 "receiver-name"="receiver-name";
