--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -180,7 +180,7 @@
 "collect-call"="גוביינא";
 "Status"="סטטוס";
 "failure-cause"="סיבת הכשל";
-"comment"הערות";
+"comment" = "הערות";
 "certificate-number (Client)"="מספר תעודה (לקוח)";
 "execution-time"="זמן ביצוע";
 "receiver-name"="שם מקבל";
