--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -180,8 +180,8 @@
 "collect-call"="גוביינא";
 "Status"="סטטוס";
 "failure-cause"="סיבת הכשל";
-"comment" = "הערות";
-"certificate-number (Client)"="מספר תעודה (לקוח)";
+"Comments"="הערות";
+"certificate-number-client"="מספר תעודה (לקוח)";
 "execution-time"="זמן ביצוע";
 "receiver-name"="שם מקבל";
 "second-receiver-name"="שם מקבל שני";
@@ -194,7 +194,7 @@
 "coordination-phone"="ת. טלפוני";
 "Receiver phone"="טלפון מקבל";
 "finish-order"="סיום הזמנה";
-"Enter note for this order(optional)"="הכנסת הודעה להזמנה זו (אופציונלי)";
+"enter-note-for-this-orderoptional"="הכנסת הודעה להזמנה זו (אופציונלי)";
 "Apartment"="דירה";
 "Entrance"="כניסה";
 "Floor"="קומה";
@@ -207,9 +207,9 @@
 "Name"="שם";
 "Volume"="כמות";
 "orderd-has-delevered-successfully"="orderd-has-delevered-successfully";//new
-"do-you-want-to-start-this-order?"="do-you-want-to-start-this-order?";//new
-"do-you-want-to-finish-this-order?" = "do-you-want-to-finish-this-order?";//new
-"do-you-want-to-pickup-this-order?"= "do-you-want-to-pickup-this-order?";//new
+"do-you-want-to-start-this-order"="do-you-want-to-start-this-order";//new
+"do-you-want-to-finish-this-order" = "do-you-want-to-finish-this-order";//new
+"do-you-want-to-pickup-this-order"= "do-you-want-to-pickup-this-order";//new
 "van-load"="van-load";//new
 "Deliver"="Deliver";//new
 
@@ -282,10 +282,10 @@
 "total-double-type"="סה''כ משטחים";
 "total-cartons"="סה''כ קרטונים";
 "total-packages"="סה''כ חבילות";
-"double-type complete"="משטחים שהושלמו";
+"double-type-complete"="משטחים שהושלמו";
 "packages-complete"="חבילות שהושלמו";
 "cartons-complete"="קרטונים שהושלמו";
-"double-type not complete"="משטחים שלא הושלמו";
+"double-type-not-complete"="משטחים שלא הושלמו";
 "cartons-not-complete"="קרטונים שלא הושלמו";
 "packages-not-complete"="חבילות שלא הושלמו";
 
@@ -295,8 +295,8 @@
 "no-tasks"="אין משימות";
 "TASK"="משימה";
 "task-id"="מספר משימה";
-"are-you-sure-you-want-to-finish-this-task?"="האם ברצונך לסיים את המשימה הזו?";
-"are-you-sure-you-want-to-cancel-this-task?"="האם ברצונך לבטל את המשימה הזו?";
+"are-you-sure-you-want-to-finish-this-task"="האם ברצונך לסיים את המשימה הזו?";
+"are-you-sure-you-want-to-cancel-this-task"="האם ברצונך לבטל את המשימה הזו?";
 "finish-task-successfully"="סיום משימה בוצע בהצלחה";
 "task-status"="סטטוס משימה";
 "task-information"="מידע על המשימה";
@@ -308,7 +308,7 @@
 "Resolve"="פתירה";
 "alert-detail"="פרטי התראה";
 "truck-name"="שם משאית";
-"commentהערה";
+"Comment"="הערה";
 "comment"="הערה...";
 "rule-id"="מספר חוק";
 "resolve-alert"="פתירת התראה";
