--- a/DMSDriver/DMSDriver/Supporting Files/Localize/pt-BR.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/pt-BR.lproj/Localizable.strings
@@ -170,8 +170,8 @@
 "collect-call"="גוביינא";
 "Status"="סטטוס";
 "failure-cause"="סיבת הכשל";
-"comment" = "הערות";
-"certificate-number (Client)"="מספר תעודה (לקוח)";
+"Comments"="הערות";
+"certificate-number-client"="מספר תעודה (לקוח)";
 "execution-time"="זמן ביצוע";
 "receiver-name"="שם מקבל";
 "second-receiver-name"="שם מקבל שני";
